--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.45.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
